draft HTTPAuthScheme